# basm-rs

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  boj  build.rs  debug-64bit-windows.cmd  gen-asm.py  gen.py  link.ld  release-32bit.sh  release-64bit-fn-impl-mingw.sh  release-64bit-fn-impl.sh  release-64bit-mingw.sh  release-64bit-windows-fn-impl.cmd  release-64bit-windows-rs.cmd  release-64bit-windows.bat  release-64bit-windows.cmd  release-64bit.sh  release-asm.sh  release-html.cmd  release-html.sh  release-rs-mingw.sh  release-rs.sh  release-wasm32.cmd  release-wasm32.sh  release.sh  rustfmt.toml  setup.sh  test.sh
.cargo/: config.toml  config_submit.toml  x86_64-unknown-linux-gnu-short.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  release-rs-short.sh  release-short.sh
basm/: Cargo.toml  build.rs
basm-boj/: Cargo.toml
basm-boj/src/: main.rs
basm-macro/: Cargo.toml
basm-macro/src/: export.rs  import.rs  lib.rs  utils.rs
basm-macro/src/types/: mangle.rs  mod.rs  try_from.rs
basm-std/: Cargo.toml
basm-std/benches/: bplus_tree.rs
basm-std/src/: collections.rs  geometry.rs  graph.rs  lib.rs  math.rs  sorts.rs  strings.rs  traits.rs  util.rs  utils.rs
basm-std/src/collections/: bitset.rs  bplus_tree.rs  fenwick.rs  jagged_vec.rs  lichao_tree.rs  segment_tree.rs  union_find.rs
basm-std/src/geometry/: point.rs  polygon.rs
basm-std/src/graph/: maxflow.rs  mcmf.rs  scc.rs
basm-std/src/math/: charpoly.rs  dynamic_modint.rs  miller_rabin.rs  modint_dynamic.rs  modmul.rs  ntt.rs  pollard_rho.rs  reeds_sloane.rs  sieve.rs  static_modint.rs
basm-std/src/math/ntt/: linear_recurrence.rs  multiply.rs  nttcore.rs  polyeval.rs  polymul.rs  polyops.rs
basm-std/src/platform/: allocator.rs  codegen.rs  mod.rs  services.rs  services_std.rs
basm-std/src/platform/io/: mod.rs  reader.rs  reader_traits.rs  writer.rs
basm-std/src/platform/loader/: aarch64_elf.rs  amd64_elf.rs  amd64_pe.rs  i686_elf.rs  mod.rs
basm-std/src/platform/malloc/: dlmalloc.rs  dlmalloc_interface.rs  dlmalloc_linux.rs  dlmalloc_macos.rs  dlmalloc_wasm32.rs  dlmalloc_windows.rs  mod.rs
basm-std/src/platform/os/: linux.rs  macos.rs  mod.rs  unknown.rs  wasm32.rs  windows.rs
basm-std/src/serialization/: deserialize.rs  mod.rs  serialize.rs
basm-std/src/utils/: f64.rs
basm/src/: solution.rs
scripts/: base91.py  bindgen_cpp.py  build-and-judge.py  check.sh  ci.py  gen.py  locator.py  release.sh  remove-got.py  srcpack.py  static-pie-elf2bin.py  static-pie-gen.py  static-pie-pe2bin.py  static-pie-prestub-amd64-print.py  static-pie-prestub-amd64-short.asm  static-pie-prestub-amd64-shorter-c.asm  static-pie-prestub-amd64-shorter.asm  static-pie-prestub-amd64.asm  static-pie-release.sh  static-pie-stub-amd64.asm  static-pie-stub-i686.asm  static-pie-template-amd64-fn-impl.c  static-pie-template-amd64-short.c  static-pie-template-amd64-short.rs  static-pie-template-amd64-shorter.c  static-pie-template-amd64-shorter.rs  static-pie-template-amd64.c  static-pie-template-amd64.rs  static-pie-template-i686.c  static-pie-template.c  static-pie.py  static-pie.sh  template.asm  template.c  template.rs  utils.py  wasm-gen.py  wasm-template.html  wasm-template.js
scripts/bindgen/: emit.py  parse.py
scripts/templates/: static-pie-prestub-amd64-2.asm  static-pie-prestub-amd64-print.py  static-pie-prestub-amd64-short.asm  static-pie-prestub-amd64-shorter-c.asm  static-pie-prestub-amd64-shorter.asm  static-pie-stub-amd64.asm  static-pie-template-amd64-fn-impl.c  static-pie-template-amd64-fn-impl.cpp  static-pie-template-amd64-short.c  static-pie-template-amd64-short.rs  static-pie-template-amd64-shorter.c  static-pie-template-amd64-shorter.rs  static-pie-template-amd64.c  static-pie-template-amd64.rs  static-pie-template-i686.c  wasm-template.html  wasm-template.js
src/: allocator.rs  codegen.rs  collections.rs  graph.rs  io.rs  io_ext.rs  lib.rs  libc_string.rs  main.rs  math.rs  services.rs  solution.rs  sorts.rs  syscall.rs
src/collections/: heap.rs  jagged_vec.rs  segment_tree.rs
src/io/: fast.rs  slow.rs
src/math/: miller_rabin.rs
src/platform/: allocator.rs  mod.rs  services.rs
src/platform/io/: mod.rs  reader.rs  writer.rs
src/platform/loader/: amd64_elf.rs  amd64_pe.rs  i686_elf.rs
src/platform/malloc/: dlmalloc.rs  dlmalloc_linux.rs  dlmalloc_wasm32.rs  dlmalloc_windows.rs  mod.rs
src/platform/os/: linux.rs  mod.rs  wasm32.rs  windows.rs
src/syscall/: dummy.rs  real.rs
tests/: boj_1001.in  boj_1001.rs  boj_14939.in  boj_14939.rs  boj_2587.in  boj_2587.out  boj_2587.rs  boj_2751.rs  boj_2751_mmapreader.rs  boj_2751_small.in  boj_2751_small.out  boj_3745.in  boj_3745.rs  ci-dev.json  ci.json  reloc.in  reloc.out  reloc.rs  utf8.out  utf8.rs
