cargo-features = ["profile-rustflags"]

[package]
name = "basm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
panic = "abort"
rustflags = [
    "-C",
    "link-args=-nostartfiles -nostdlib -fno-exceptions -static -fno-asynchronous-unwind-tables -fno-unwind-tables -fno-stack-protector -fno-plt -Wl,--build-id=none,--gc-sections,--omagic,-zstack-size=67108864,--no-eh-frame-hdr",
    "-C",
    "target-feature=+avx,+avx2,+sse,+sse2,+sse3,+ssse3,+sse4.1,+sse4.2,+fma,+f16c,+aes",
    "-C",
    "relocation-model=pic",
    "-C",
    "target-cpu=haswell",
]

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
rustflags = [
    "-C",
    "link-args=-nostartfiles -nostdlib -fno-exceptions -static -fno-asynchronous-unwind-tables -fno-unwind-tables -fno-stack-protector -fno-plt -Wl,--build-id=none,--gc-sections,--omagic,-zstack-size=67108864,--no-eh-frame-hdr",
    "-C",
    "target-feature=+avx,+avx2,+sse,+sse2,+sse3,+ssse3,+sse4.1,+sse4.2,+fma,+f16c,+aes",
    "-C",
    "relocation-model=pic",
    "-C",
    "target-cpu=haswell",
]

[profile.test]
rustflags = []

[features]
no-probe = []
slow-io = []
