[package]
name = "basm"
version = "0.1.0"
edition = "2021"
default-run = "basm"
autobins = false

[lib]
name = "basm"
test = true
bench = true
path = "src/lib.rs"

[[bin]]
name = "basm"
test = false
bench = false
path = "src/bin/basm.rs"

[[bin]]
name = "basm-submit"
test = false
bench = false
path = "src/bin/basm-submit.rs"

[dependencies]
compiler_builtins = { version = "0.1.101", features = ["mem"] }
dtoa = "1.0.9"
libm = "0.2.7"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
overflow-checks = false
codegen-units = 1
strip = true
