cargo-features = ["edition2024"]

[package]
name = "basm-macro"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
name = "basm_macro"
test = false
bench = false
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"