[package]
name = "basm-std"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "basm_std"
test = true
bench = true
path = "src/lib.rs"

[dependencies]
libm = "0.2.8"
ryu = "1.0"

[target.x86_64-pc-windows-msvc.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.x86_64-pc-windows-gnu.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.x86_64-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.i686-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.aarch64-apple-darwin.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.wasm32-unknown-unknown.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }

[features]
# Enables codegen routines.
# When this feature is enabled, the external implementations should provide an `extern "C" fn _basm_main()`.
codegen = []
# Favors short routines for code golf.
short = []
# Configures the crate for submission.
submit = []
