[package]
name = "basm-std"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
name = "basm_std"
test = true
bench = true
path = "src/lib.rs"

[dependencies]
libm = "0.2.15"
ryu = "1.0"
rand = { version = "0.9.1", default-features = false, features = ["alloc", "small_rng"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bplus_tree"
harness = false

[target.x86_64-pc-windows-msvc.dependencies]
compiler_builtins = { version = "0.1.158", features = ["mem"] }
[target.x86_64-pc-windows-gnu.dependencies]
compiler_builtins = { version = "0.1.158", features = ["mem"] }
[target.x86_64-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1.158", features = ["mem"] }
[target.i686-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1.158", features = ["mem"] }
[target.aarch64-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1.158", features = ["mem"] }
[target.aarch64-apple-darwin.dependencies]
compiler_builtins = { version = "0.1.158", features = ["mem"] }
[target.wasm32-unknown-unknown.dependencies]
compiler_builtins = { version = "0.1.158", features = ["mem"] }

[features]
# Favors short routines for code golf.
short = []
# Use this feature to enable fast I/O routines under short. When short is not on, fast I/O is always on regardless of this feature.
fastio = []
# Configures the crate for submission.
submit = []
