[package]
name = "basm"
version = "0.1.0"
edition = "2021"
default-run = "basm"
autobins = false

[[bin]]
name = "basm"
test = false
bench = false
path = "src/bin/basm.rs"

[[bin]]
name = "basm-submit"
test = false
bench = false
path = "src/bin/basm-submit.rs"

[dependencies]
libm = "0.2.7"
ryu = "1.0"
basm-std = { path = "../basm-std" }
basm-macro = { path = "../basm-macro" }

[target.x86_64-pc-windows-msvc.dependencies]
compiler_builtins = { version = "0.1.103", features = ["mem"] }
[target.x86_64-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1.103", features = ["mem"] }
[target.i686-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1.103", features = ["mem"] }
[target.wasm32-unknown-unknown.dependencies]
compiler_builtins = { version = "0.1.103", features = ["mem"] }

[features]
short = []
