cargo-features = ["edition2024"]

[package]
name = "basm"
version = "0.1.0"
edition = "2024"
default-run = "basm"
autobins = false

[lib]
test = true
bench = true
path = "src/bin/basm-lib.rs"

[[bin]]
name = "basm"
test = false
bench = false
path = "src/bin/basm.rs"

[[bin]]
name = "basm-submit"
test = false
bench = false
path = "src/bin/basm-submit.rs"
required-features = ["submit"]

[dependencies]
libm = "0.2.7"
ryu = "1.0"
basm-macro = { path = "../basm-macro" }
basm-std = { path = "../basm-std", features = ["codegen"] }

[target.x86_64-pc-windows-msvc.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.x86_64-pc-windows-gnu.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.x86_64-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.i686-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.aarch64-apple-darwin.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }
[target.wasm32-unknown-unknown.dependencies]
compiler_builtins = { version = "0.1.118", features = ["mem"] }

[features]
short = ["basm-std/short"]
submit = ["basm-std/submit"]
